--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -49,7 +49,9 @@
 }
 
 img{
+  /* display: none; */
   height: 16em;
+  border: 3px solid red;
 }
 
 input {
@@ -61,6 +63,6 @@ input {
 }
 
 body{
-  /* background-image: url("https://images.unsplash.com/photo-1542779283-429940ce8336?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"); */
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/1200px-International_Pok%C3%A9mon_logo.svg.png");
   background-size: cover;
 }
