--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* *,
+*:after,
+*:before {
+  padding: 0;
+  border: 0;
+  margin: 0;
+  outline: 0;
+  box-sizing: border-box;
+  user-select: none;
+} */
+
+html, body {
+  height: 100%;
+  font-size: 18px;
+}
+
+a,
+a:active,
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  /* color: inherit; */
+  font-size: inherit;
+  cursor: pointer;
+  border: red 1px solid;
+  box-shadow: royalblue 5px 5px 10px;
+}
