--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@
 
 img{
   /* display: none; */
-  height: 12em;
+  /* height: 12em; */
+  margin: auto;
   /* border: 3px solid red; */
 }
 
@@ -77,7 +78,10 @@ body{
 nav{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: #99aaab50;
+  background-color: #85858550;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align: center;
 }
 nav a{
   text-decoration: none;
@@ -87,6 +91,7 @@ nav a{
 .capitalize{
   text-transform: capitalize;
 }
+
 .linkedItems{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -101,4 +106,26 @@ nav a{
 .linkedItems a{
   text-decoration: none;
   color: inherit;
+}
+.PokemonDisplay{
+  display:grid;
+  grid-template-rows: auto;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+/* .PokemonDisplay img{
+  margin: auto;
+} */
+.PokemonDisplay .heading{
+  font-size: xx-large;
+  font-weight: 700;
+  text-align: center;
+  background-color: #0000ff50;
+}
+
+.PokemonDisplay .statSection{
+  font-size: larger;
+  border:#0000ff50 1px solid;
+  background-color: #80808050;
+  padding: 5px;
 }
